# sankash

./: .gitignore  ARCHITECTURE.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  input_csv_account_converter.py  main.py  pyproject.toml  reflex_test_output.txt  rxconfig.py
config/: __init__.py  settings.example.yaml  settings.py
converters/: __init__.py
implement/: bugfix-logging-plan.md  bugfix-summary.md  categories-summary.md  category-display-enhancement-plan.md  category-display-enhancement-summary.md  color-palette-plan.md  import-history-plan.md  import-history-state.json  plan.md  sankey-enhancement-summary.md  search-sankey-plan.md  search-sankey-summary.md  state.json  summary.md
migrations/: 001_add_match_type_to_rules.sql
sankash/: __init__.py  sankash.py
sankash/components/: kpi_cards.py  layout.py  sidebar.py
sankash/converters/: __init__.py  bank_converters.py
sankash/core/: __init__.py  database.py  default_categories.py  logger.py  models.py  schema.sql  storage.py
sankash/pages/: __init__.py  accounts.py  categories.py  dashboard.py  import_page.py  rules.py  settings.py  transactions.py
sankash/services/: __init__.py  account_service.py  analytics_service.py  category_service.py  import_history_service.py  import_service.py  llm_service.py  rule_service.py  settings_service.py  (+1 more)
scripts/: check_hash_collisions.py  clear_categories.py  diagnose_csv_import.py  init_database.py  init_db.py  migrate_database.py  migrate_import_history.py  reimport_csv.py  seed_categories.py  setup.py  test_reflex.sh
tests/: conftest.py
(+16 files in other folders)
